# Projekt_randezvous_ifek

./: CMakeLists.txt
src/: Agent.h  Wierzcholek.h  funckje.cpp  funckje_agent.cpp  main.cpp  zalozenia_projektu
